fix spacing, response, complete task from asana

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -120,7 +120,6 @@ body {
       height: 40px;
       object-fit: contain;
       opacity: 0.5;
-      flex: 0 1 100%;
     }
 
     &--orgain img {
@@ -316,7 +315,7 @@ body {
   }
 
   &-padding-top {
-    padding-top: 497px;
+    padding-top: 23.4%;
   }
 }
 
