--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,6 +3,23 @@
   background-color: #313131;
   &__inner {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+  }
+
+  &__link {
+    color: var(--accent-color);
+    white-space: nowrap;
+    @extend %inter-bold;
+  }
+
+  &__logo {
+    margin-bottom: 10px;
+  }
+
+  &__copy {
+    text-align: center;
+    color: #fff;
   }
 }
