--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -227,7 +227,6 @@
     position: relative;
     margin-top: 99px;
     box-shadow: 0px 0px 20px #0000001C;
-    border-radius: 20px;
     overflow: hidden;
 
     &:hover .product__img--hover {
@@ -240,8 +239,8 @@
   &__img {
     transition: ease 0.3s opacity;
     img {
-      width: 100%;
-      height: 790px;
+      display: block;
+      margin: 0 auto;
       object-fit: cover;
       object-position: top;
       border-radius: 5px;
@@ -513,7 +512,7 @@
   }
 
   &__action-accent {
-    display: block;
+    display: inline-block;
     margin: 0 6px;
     @extend %inter-bold;
   }
